--- a/src/main/resources/fri/ris/sokolris/sokol.fxml
+++ b/src/main/resources/fri/ris/sokolris/sokol.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="582.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fri.ris.sokolris.HelloController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="582.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fri.ris.sokolris.ZmPoveljnikAktivirajClane">
    <center>
       <VBox BorderPane.alignment="CENTER">
          <children>
@@ -23,7 +23,7 @@
             </TableView>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
                <children>
-                  <Button defaultButton="true" mnemonicParsing="false" text="Aktiviraj izbrane člane" />
+                  <Button defaultButton="true" mnemonicParsing="false" onAction="#initialize" text="Aktiviraj izbrane člane" />
                   <Button mnemonicParsing="false" text="Aktiviraj vse člane" />
                </children>
             </HBox>
